--- a/templates/schemas_main.html
+++ b/templates/schemas_main.html
@@ -27,7 +27,7 @@
     </div>
     <div class="schema_proto">
         <p class="schema_header schema_header_every">Сетка <span class="orange_text"> "Каждый с каждым" </span></p>
-        <a class="schema_main">
+        <a class="schema_main" href="{{ url_for('tournaments_all_vs_all') }}">
             <ul>
                 <li class="schema_main_text"> Подходит для ораганизации небольших турниров</li>
                 <li class="schema_main_text">Отлично подойдёт на соревнований 1 на 1</li>
