--- a/templates/classes/tournaments/tournaments_base.html
+++ b/templates/classes/tournaments/tournaments_base.html
@@ -5,10 +5,8 @@
 {% endblock %}
 
 {% block body %}
-    <div class="all_vs_all_header">Настройте свой свой турнир!</div>
-    <div class="tournaments_schema" >
+    <div class="all_vs_all_header">Настройте свой свой <span class="orange_text">турнир!</span></div>
         {% block body2 %}
 
         {% endblock %}
-    </div>    
 {% endblock %}
