working on models

--- a/templates/header.html
+++ b/templates/header.html
@@ -17,7 +17,7 @@
         </a>
         <a class="header_text" href="#start_main">С чего начать?</a>
         <a class="header_text" href="{{ url_for('schemas') }}">Создать турнир</a>
-        <a class="header_text" href="{{ url_for('tournaments') }}">Турниры</a>
+        <a class="header_text" href="{{ url_for('tournaments_page') }}">Турниры</a>
         <a class="header_text" href="{{ url_for('teams') }}">Команды</a>
         <a class="header_text" href="{{ url_for('users') }}">Игроки</a>
             <a class="login" href="{{ url_for('login') }}">
