--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -7,17 +7,42 @@
 
 {% block form %}
 <div class="login_header"> Зарегистрируйтесь </div>
-<form method="post" action="/auth/register">
+<form method="post" action="/auth/register" id="registration-form">
     <div class="login_input_text"> Ваш <span class="orange_text">логин:</span>
-        <input class="login_input_login" type="text" name="username">
+        <input class="login_input_login" type="text" name="username" id="username">
+    </div>    
+    <div class="login_input_text"> Ваш <span class="orange_text">email:</span>
+        <input class="login_input_register email_input_register" name="password" id="password">
     </div>
     <div class="login_input_text"> Ваш <span class="orange_text">пароль:</span>
-        <input class="login_input_register" type="password" name="password">
-    </div>
-    <div class="login_input_text"> Повторите <span class="orange_text">пароль:</span>
-        <input class="login_input_register reg_input_repeat" type="password" name="password">
+        <input class="login_input_register" type="password" name="email" id="email">
     </div>
     <p class="reg_help_text">Если у вас уже есть аккаунт вы можете в него <a class="reg_help_href" href="{{ url_for('login') }}">Войти</a></p>
     <input class="input_submit reg_supmit" type="submit" value="Завершить">
 </form>
 {% endblock %}
+
+<!--<form action="/submit-form" method="post">-->
+<!--    <label for="username">Username:</label><br>-->
+<!--    <input type="text" id="username" name="username"><br><br>-->
+<!--    -->
+<!--    <label for="email">Email:</label><br>-->
+<!--    <input type="email" id="email" name="email"><br><br>-->
+<!--    -->
+<!--    <label for="password">Password:</label><br>-->
+<!--    <input type="password" id="password" name="password"><br><br>-->
+<!--    -->
+<!--    <label for="role_id">Role ID:</label><br>-->
+<!--    <input type="number" id="role_id" name="role_id"><br><br>-->
+<!--    -->
+<!--    <label for="is_active">Is Active:</label><br>-->
+<!--    <input type="checkbox" id="is_active" name="is_active" checked><br><br>-->
+<!--    -->
+<!--    <label for="is_superuser">Is Superuser:</label><br>-->
+<!--    <input type="checkbox" id="is_superuser" name="is_superuser"><br><br>-->
+<!--    -->
+<!--    <label for="is_verified">Is Verified:</label><br>-->
+<!--    <input type="checkbox" id="is_verified" name="is_verified"><br><br>-->
+<!--    -->
+<!--    <input type="submit" value="Submit">-->
+<!--</form>-->
