--- a/templates/header.html
+++ b/templates/header.html
@@ -15,7 +15,7 @@
                 ЛОГО
             </p>
         </a>
-        <a class="header_text" href="#start_main">С чего начать?</a>
+        <a class="header_text" href="http://127.0.0.1:8000#start_main">С чего начать?</a>
         <a class="header_text" href="{{ url_for('schemas') }}">Создать турнир</a>
         <a class="header_text" href="{{ url_for('tournaments_page') }}">Турниры</a>
         <a class="header_text" href="{{ url_for('teams') }}">Команды</a>
