--- a/templates/auth/log_base.html
+++ b/templates/auth/log_base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{{ url_for('static', path='css/styles.css') }}" rel="stylesheet">
+    <script src="{{ url_for('static', path='js/html_to_json.js') }}" defer></script>
     {% block head %}
     {% endblock %}
 </head>
