--- a/templates/header.html
+++ b/templates/header.html
@@ -30,4 +30,9 @@
     </div>
     {% block body %}
     {% endblock %}
+<div class="footer">
+    <p class="footer_text">Простите за это</p>
+    <p class="footer_text">Мой github, для жалоб: <a href="https://github.com/Hintus" class="orange_text">https://github.com/Hintus</a></p>
+    <p class="footer_text">Об ошибках писать сюда: <a href="https://web.telegram.org/a/" class="orange_text">@KhinaEgor</a></p>
+</div>
 </body>
