--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -143,6 +143,26 @@ a{
     color: var(--my_orange);
 }
 
+.footer{
+    width: 100%;
+    height: 50px;
+    background-color: inherit;
+    border: 1px solid rgb(48, 48, 48);
+    left: 0px;
+    margin: 0px;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    font-size: 14px;
+    color: rgba(255, 255, 255, 0.441);
+    padding-left: 120px;
+}
+
+.footer_text{
+    flex: 1 1 auto;
+}
+
 .main{
     display: block;
     flex-grow: 1;
@@ -351,6 +371,7 @@ a{
     display: flex;
     width: 100%;
     margin-left: 30px;
+    height: 460px;
 }
 
 .schema_proto{
