--- a/templates/auth/log_base.html
+++ b/templates/auth/log_base.html
@@ -15,9 +15,16 @@
             <div class="arrow_end arrow_end_back"></div>
         </div>
     </a>
+    <div style="height: 442px;">
     <div class="log_form">
         {% block form %}
         {% endblock %}
     </div>
+    </div>
+<div class="footer">
+    <p class="footer_text">Простите за это</p>
+    <p class="footer_text">Мой github, для жалоб: <a href="https://github.com/Hintus" class="orange_text">https://github.com/Hintus</a></p>
+    <p class="footer_text">Об ошибках писать сюда: <a href="https://web.telegram.org/a/" class="orange_text">@KhinaEgor</a></p>
+</div>
 </body>
 </html>
